[Gordon] 新增環境變數 APP_SEVER_HOST_NAME

--- a/.dev.env
+++ b/.dev.env
@@ -4,6 +4,7 @@ DB_NAME=bookstore
 DB_SEVER_HOST_NAME=localhost
 DB_SEVER_HOST_PORT=5432
 LISTENING_PORT=5001
+APP_SEVER_HOST_NAME=localhost
 MAIL_SERVER=smtp.cc.ncu.edu.tw
 MAIL_PORT=25
 MAIL_USE_SSL=False
