--- a/.test.env
+++ b/.test.env
@@ -3,7 +3,8 @@ DB_PASSWORD=app_001
 DB_NAME=bookstore
 DB_SEVER_HOST_NAME=bookmazon-db.cidqlarebqc2.ap-northeast-1.rds.amazonaws.com
 DB_SEVER_HOST_PORT=5432
-LISTENING_PORT=5001
+APP_SEVER_HOST_NAME=ec2-57-181-67-101.ap-northeast-1.compute.amazonaws.com
+LISTENING_PORT=8000
 MAIL_SERVER=smtp.cc.ncu.edu.tw
 MAIL_PORT=25
 MAIL_USE_SSL=False
