--- a/.dev.env
+++ b/.dev.env
@@ -7,8 +7,9 @@ LISTENING_PORT=5001
 APP_SEVER_HOST_NAME=localhost
 MAIL_SERVER=smtp.cc.ncu.edu.tw
 MAIL_PORT=25
+MAIL_USE_TLS=False
 MAIL_USE_SSL=False
 MAIL_USERNAME=111423059@cc.ncu.edu.tw
-MAIL_PASSWORD=gAAAAABleb0Kl6Dkis6sAIRUA5nhPhrjW6f9D-SVGIvOwucSeEh1-Wep0dq_lNymqf6z5GVbRXSECjHz7YOzfyfkUcZDEMJD5A==
+MAIL_PASSWORD=?Qgrs3581
 PRIVATE_KEY=nwjZWj8-pjJ4bn3gebESwb2okum57VvzMBia5KwMaVA=
 RECEIVE_MAIL_USERNAME=112423001@cc.ncu.edu.tw
