--- a/.prod.env
+++ b/.prod.env
@@ -7,6 +7,7 @@ APP_SEVER_HOST_NAME=ec2-57-181-67-101.ap-northeast-1.compute.amazonaws.com
 LISTENING_PORT=8000
 MAIL_SERVER=smtp.cc.ncu.edu.tw
 MAIL_PORT=25
+MAIL_USE_TLS=False
 MAIL_USE_SSL=False
 MAIL_USERNAME=111423059@cc.ncu.edu.tw
 MAIL_PASSWORD=gAAAAABleb0Kl6Dkis6sAIRUA5nhPhrjW6f9D-SVGIvOwucSeEh1-Wep0dq_lNymqf6z5GVbRXSECjHz7YOzfyfkUcZDEMJD5A==
