--- a/.test.env
+++ b/.test.env
@@ -5,10 +5,11 @@ DB_SEVER_HOST_NAME=bookmazon-db.cidqlarebqc2.ap-northeast-1.rds.amazonaws.com
 DB_SEVER_HOST_PORT=5432
 APP_SEVER_HOST_NAME=ec2-57-181-67-101.ap-northeast-1.compute.amazonaws.com
 LISTENING_PORT=8000
-MAIL_SERVER=smtp.cc.ncu.edu.tw
-MAIL_PORT=25
+MAIL_SERVER=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USE_TLS=True
 MAIL_USE_SSL=False
-MAIL_USERNAME=111423059@cc.ncu.edu.tw
-MAIL_PASSWORD=gAAAAABleb0Kl6Dkis6sAIRUA5nhPhrjW6f9D-SVGIvOwucSeEh1-Wep0dq_lNymqf6z5GVbRXSECjHz7YOzfyfkUcZDEMJD5A==
+MAIL_USERNAME=1088cbfa5e079a
+MAIL_PASSWORD=7eec35e4f24bbd
 PRIVATE_KEY=nwjZWj8-pjJ4bn3gebESwb2okum57VvzMBia5KwMaVA=
 RECEIVE_MAIL_USERNAME=112423001@cc.ncu.edu.tw
