新增環境變數 APP_SEVER_HOST

--- a/.dev.env
+++ b/.dev.env
@@ -2,9 +2,10 @@ DB_ACCOUNT=app_001
 DB_PASSWORD=app_001
 DB_NAME=bookstore
 DB_SEVER_HOST_NAME=localhost
-DB_SEVER_HOST_PORT=5432
+DB_SEVER_HOST_PORT=5433
 LISTENING_PORT=5001
 APP_SEVER_HOST_NAME=localhost
+APP_SEVER_HOST=localhost:5001
 MAIL_SERVER=smtp.cc.ncu.edu.tw
 MAIL_PORT=25
 MAIL_USE_TLS=False
