--- a/.prod.env
+++ b/.prod.env
@@ -5,6 +5,7 @@ DB_SEVER_HOST_NAME=bookmazon-db.cidqlarebqc2.ap-northeast-1.rds.amazonaws.com
 DB_SEVER_HOST_PORT=5432
 APP_SEVER_HOST_NAME=ec2-57-181-67-101.ap-northeast-1.compute.amazonaws.com
 LISTENING_PORT=8000
+APP_SEVER_HOST=ec2-57-181-67-101.ap-northeast-1.compute.amazonaws.com
 MAIL_SERVER=smtp.cc.ncu.edu.tw
 MAIL_PORT=25
 MAIL_USE_TLS=False
